Fix z-index issues with sidepanel and draggable items - Always keep sidepanel on top on dragstop event. Other minor fixes

--- a/public/main.css
+++ b/public/main.css
@@ -13,6 +13,10 @@ body {
     z-index:2;
 }
 
+.editable {
+    cursor: pointer;
+}
+
 .wb_table .btn {
     display:none;
 }
